<resources>
    <string name="app_name">Cantus Firmus</string>
    <string name="play_music_btn_text">Play Local Music</string>
    <string name="selected_file_default_text">No file selected</string>
    <string name="find_music_btn_text">Find Music</string>
    <string name="song_title_hint">Song Title?</string>
    <string name="search_lbl">Search</string>
    <string name="login_lbl">Login</string>
    <string name="register_lbl">Register</string>
    <string name="tagLine">World\'s Best Music Player</string>
    <string name="title">Ca-Fi</string>
    <string name="password_lbl">Password</string>
    <string name="email_address_lbl">Email Address</string>
    <string name="first_name_lbl">First Name</string>
    <string name="last_name_lbl">Last Name</string>
    <string name="email_lbl">Email</string>
    <string name="username_lbl">Username</string>
    <string name="password_lbll">Password</string>
    <string name="confirm_password_lbl">Confirm Password</string>
    <string name="user_info_lbl">User Info</string>
    <string name="getting_info_lbl">Getting Information From Server!</string>
    <string name="songtitleplaceholder">SongTitlePlaceHolder</string>
</resources>
