<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group10.tcss450.uw.edu.cantusfirmus.register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:id="@+id/reg_firstName"
        android:hint="@string/first_name_lbl"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:id="@+id/reg_lastName"
        android:hint="@string/last_name_lbl"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:id="@+id/reg_email"
        android:hint="@string/email_lbl"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:id="@+id/reg_userName"
        android:hint="@string/username_lbl"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:id="@+id/reg_password"
        android:inputType="textPassword"
        android:hint="@string/password_lbll"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:id="@+id/reg_confirmPass"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_lbl"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perform_registration"
        android:text="@string/register_lbl"/>
    </LinearLayout>
</RelativeLayout>
