<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group10.tcss450.uw.edu.cantusfirmus.login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/blankSpace"/>
    <EditText
        android:layout_below="@id/blankSpace"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:layout_width="300dp"
        android:gravity="center"
        android:id="@+id/username_field"
        android:hint="@string/email_address_lbl"
        />
    <EditText
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/text_background"
        android:layout_below="@+id/username_field"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:gravity="center"
        android:id="@+id/password_field"
        android:hint="@string/password_lbl"
        />
    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/perform_login"
        android:text="@string/login_lbl"/>

</RelativeLayout>
